@startuml

' Define the User entity class
class User {
  - Long id
  - String username
  - String email
}

' Define the JpaRepository interface
interface JpaRepository {
  + save(entity)
  + findById(id)
  + delete(entity)
}

' Define the UserRepository interface extending JpaRepository
interface UserRepository {
  + existsByUsernameOrEmail(username: String, email: String): boolean
  + findByRole(userRole: UserRole, pageable: Pageable): Page<UserDetail>
}

' Generalization arrow showing UserRepository extends JpaRepository<User, Long>
UserRepository --> JpaRepository : extends

' Association arrow showing User entity is managed by JpaRepository
JpaRepository <|-- User

@enduml